--- a/src/assets/shared/components/UploadPhoto/index.module.scss
+++ b/src/assets/shared/components/UploadPhoto/index.module.scss
@@ -36,10 +36,10 @@
 }
 
 .image {
-    margin: 1rem 0.5rem;
     position: relative;
-
     &__img {
+        cursor: pointer;
+        border-radius: 6px;
         width: 200px;
         height: 200px;
         object-fit: cover;
@@ -63,8 +63,10 @@
     padding: 0;
 }
 
-.image button:hover {
-    background-color: red;
+@media (hover: hover) {
+    .image button:hover {
+        background-color: red;
+    }
 }
 
 .image p {
@@ -97,4 +99,23 @@
 
 .error span {
     color: red;
+}
+.fullscreen-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.fullscreen-image {
+    border-radius: 6px;
+    max-width: 90%;
+    max-height: 90%;
+    cursor: pointer;
 }
