--- a/src/assets/shared/components/pages/Meeting/MeetingItem/index.module.scss
+++ b/src/assets/shared/components/pages/Meeting/MeetingItem/index.module.scss
@@ -14,8 +14,9 @@
             height: 100%;
             &__img {
                 width: 100%;
-                height: 100%;
+                height: 200px;
                 border-radius: 8px 8px 0 0;
+                object-fit: cover;
             }
         }
         &__date {
@@ -71,7 +72,8 @@
                 height: 100%;
                 &__img {
                     width: 100%;
-                    height: 100%;
+                    height: 200px;
+                    object-fit: cover;
                 }
             }
             &__date {
@@ -115,7 +117,8 @@
                 height: 100%;
                 &__img {
                     width: 100%;
-                    height: 100%;
+                    height: 200px;
+                    object-fit: cover;
                 }
             }
             &__date {
@@ -160,7 +163,8 @@
                 height: 100%;
                 &__img {
                     width: 100%;
-                    height: 100%;
+                    height: 200px;
+                    object-fit: cover;
                 }
             }
             &__date {
