--- a/src/assets/shared/components/pages/Meeting/MeetingList/index.module.scss
+++ b/src/assets/shared/components/pages/Meeting/MeetingList/index.module.scss
@@ -11,6 +11,18 @@
         line-height: 34px;
         font-weight: 600;
         margin-bottom: 20px;
+        display: block;
+        &__active {
+            cursor: pointer;
+            color: rgba(0, 0, 0, 1);
+        }
+        &__inactive {
+            cursor: pointer;
+            color: rgba(0, 0, 0, 0.3);
+        }
+        &__divider {
+            margin: 0 10px;
+        }
     }
     &__header {
         display: flex;
@@ -68,6 +80,9 @@
             font-size: 24px;
             line-height: 34px;
             font-weight: 600;
+            flex-direction: row;
+            display: flex;
+            flex-direction: row;
         }
         &__header {
             display: flex;
