--- a/src/assets/shared/components/inputs/InputDropdown/index.module.scss
+++ b/src/assets/shared/components/inputs/InputDropdown/index.module.scss
@@ -76,21 +76,45 @@
     display: flex;
     align-items: center;
 }
-
+.optionsnot {
+    font-family: "Montserrat", sans-serif;
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: block;
+    max-height: 15em;
+    overflow-y: auto;
+    border: 2px solid #b3b3b3;
+    border-radius: 6px;
+    width: 100%;
+    left: 0;
+    top: calc(100% + 5px);
+    background-color: white;
+    z-index: 100;
+}
 .options {
     font-family: "Montserrat", sans-serif;
     position: absolute;
     margin: 0;
     padding: 0;
     list-style: none;
-    display: none;
-    // max-height: 15em;
     overflow-y: auto;
     border: 2px solid #b3b3b3;
     border-radius: 6px;
     width: 100%;
     left: 0;
-    top: calc(100% + 0.25em);
+    top: calc(100% + 55px);
+    background-color: white;
+    z-index: 100;
+}
+.inp {
+    position: absolute;
+    // display: none;
+    // max-height: 15em;
+    width: 100%;
+    left: 0;
+    top: calc(100% + 5px);
     background-color: white;
     z-index: 100;
 }
