--- a/src/assets/shared/components/Loader/index.module.scss
+++ b/src/assets/shared/components/Loader/index.module.scss
@@ -8,7 +8,7 @@
     // opacity: 0.9;
     z-index: 999;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
