--- a/src/assets/shared/components/QrCode/index.module.scss
+++ b/src/assets/shared/components/QrCode/index.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     &__block {
+        cursor: pointer;
         // margin: 10px auto 0;
         max-width: 220px;
         // padding: 10px;
@@ -17,4 +18,23 @@
             max-width: 500px;
         }
     }
+}
+.fullscreen-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.fullscreen-image {
+    border-radius: 6px;
+    max-width: 90%;
+    max-height: 90%;
+    cursor: pointer;
 }
