--- a/src/assets/shared/components/layout/Header/index.module.scss
+++ b/src/assets/shared/components/layout/Header/index.module.scss
@@ -42,7 +42,8 @@
             right: 0;
             top: 60px;
             bottom: 0;
-            width: 375px;
+            // width: 375px;
+            width: 100%;
             height: 100vh;
             background-color: #f8f8f8;
             z-index: 50;
@@ -109,6 +110,11 @@
             padding: 0 24px;
             // max-width: 768px;
             // margin: 0 auto;
+        }
+        &__menu {
+            &__visible {
+                width: 375px;
+            }
         }
     }
 }
