--- a/src/assets/shared/components/User/index.module.scss
+++ b/src/assets/shared/components/User/index.module.scss
@@ -10,14 +10,20 @@
     }
     &__btn {
         cursor: pointer;
-        font-size: 18px;
-        line-height: 28px;
-        border: 1px solid black;
-        border-radius: 6px;
-        padding: 5px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        // font-size: 18px;
+        // line-height: 28px;
+        // border: 1px solid black;
+        // border-radius: 6px;
+        // padding: 5px;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
+        &__img {
+            width: 35px;
+            height: 35px;
+            border-radius: 50px;
+            object-fit: cover;
+        }
     }
     &__name {
         display: flex;
