--- a/src/assets/shared/components/layout/Header/index.module.scss
+++ b/src/assets/shared/components/layout/Header/index.module.scss
@@ -84,12 +84,19 @@
         margin-left: 50px;
         gap: 16px;
         margin-top: 16px;
-    }
-    li {
-        display: inline-block;
-        font-size: 16px;
-        line-height: 24px;
-        margin-right: 20px;
+        &__item {
+            display: inline-block;
+            font-size: 16px;
+            line-height: 24px;
+            margin-right: 20px;
+            padding: 2px 5px;
+        }
+        @media (hover: hover) {
+            &__item:hover {
+                border-radius: 6px;
+                background-color: rgba(50, 94, 165, 0.33);
+            }
+        }
     }
     a {
         color: #000;
