--- a/src/assets/shared/components/QrShare/index.module.scss
+++ b/src/assets/shared/components/QrShare/index.module.scss
@@ -4,11 +4,12 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 343px;
-    max-height: 100%;
+    // max-height: 100vh;
 }
 .qr {
     display: flex;
     flex-direction: column;
+    align-items: center;
     &__block {
         // margin: 10px auto 0;
         max-width: 220px;
