--- a/src/assets/shared/components/pages/Qr/index.module.scss
+++ b/src/assets/shared/components/pages/Qr/index.module.scss
@@ -32,6 +32,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: calc(var(--vh, 1vh) * 100);
+    overflow: hidden;
 }
 .header {
     text-align: center;
@@ -133,7 +134,7 @@
     &__guest {
         position: fixed;
         top: 56px;
-        bottom: 220px;
+        // bottom: 220px;
         left: 0;
         right: 0;
         display: flex;
