--- a/src/assets/shared/components/pages/Qr/index.module.scss
+++ b/src/assets/shared/components/pages/Qr/index.module.scss
@@ -35,12 +35,22 @@
     overflow: hidden;
 }
 .header {
-    text-align: center;
+    // text-align: center;
+    // background-color: #fff;
+    // padding: 16px 0;
+    // box-shadow: 0 1px 4px 0px rgb(0, 0, 0, 0.5);
+    // z-index: 2;
+    // position: relative;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
     background-color: #fff;
+    text-align: center;
     padding: 16px 0;
-    box-shadow: 0 1px 4px 0px rgb(0, 0, 0, 0.5);
     z-index: 2;
-    position: relative;
+    top: 0;
+    height: 56px;
+    box-shadow: 0 1px 4px 0px rgb(0, 0, 0, 0.5);
     &__label {
         font-size: 16px;
         font-weight: 500;
