--- a/src/assets/shared/components/pages/Qr/index.module.scss
+++ b/src/assets/shared/components/pages/Qr/index.module.scss
@@ -66,7 +66,8 @@
     width: 100%;
     height: 100vh;
     object-fit: cover;
-    z-index: -1;
+    z-index: 0;
+    display: block;
     &__inactive {
         display: none;
     }
@@ -112,7 +113,7 @@
 .content {
     position: fixed;
     top: 56px;
-    bottom: 220px;
+    bottom: 260px;
     left: 0;
     right: 0;
     display: flex;
