--- a/src/assets/shared/components/pages/Qr/index.module.scss
+++ b/src/assets/shared/components/pages/Qr/index.module.scss
@@ -150,14 +150,15 @@
         display: flex;
         overflow: auto;
         z-index: 1;
-        height: calc(100vh - 56px - 69px);
+        // height: calc(100vh - 56px - 69px);
+        height: 100%;
         background-color: #fff;
         &__list {
             display: flex;
             flex-direction: column;
             overflow: auto;
             width: 100%;
-            height: calc(100vh - 56px - 150px);
+            // height: calc(100vh - 56px - 150px);
             &__header {
                 margin: 10px auto;
                 font-size: 18px;
