--- a/src/assets/shared/components/pages/Qr/index.module.scss
+++ b/src/assets/shared/components/pages/Qr/index.module.scss
@@ -198,7 +198,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow: auto;
+    // overflow: auto;
     // height: 100%;
     height: calc(100vh - 56px - 69px);
     z-index: 1;
