--- a/src/assets/shared/components/pages/Qr/index.module.scss
+++ b/src/assets/shared/components/pages/Qr/index.module.scss
@@ -157,8 +157,8 @@
             display: flex;
             flex-direction: column;
             overflow: auto;
-            width: 100%;
-            // height: calc(100vh - 56px - 150px);
+            height: 100%;
+            height: calc(100vh - 56px - 150px);
             &__header {
                 margin: 10px auto;
                 font-size: 18px;
@@ -200,7 +200,8 @@
     justify-content: space-between;
     // overflow: auto;
     // height: 100%;
-    height: calc(100vh - 56px - 69px);
+    // height: calc(100vh - 56px - 69px);
+    height: calc(100vh - 56px - 120px);
     z-index: 1;
     &__btn {
         margin-bottom: 20px;
