--- a/src/assets/shared/components/pages/Qr/index.module.scss
+++ b/src/assets/shared/components/pages/Qr/index.module.scss
@@ -34,22 +34,22 @@
     height: calc(var(--vh, 1vh) * 100);
 }
 .header {
-    // text-align: center;
-    // background-color: #fff;
-    // padding: 16px 0;
-    // box-shadow: 0 1px 4px 0px rgb(0, 0, 0, 0.5);
-    // z-index: 2;
-    // position: relative;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    background-color: #fff;
     text-align: center;
+    background-color: #fff;
     padding: 16px 0;
-    z-index: 2;
-    top: 0;
-    height: 56px;
     box-shadow: 0 1px 4px 0px rgb(0, 0, 0, 0.5);
+    z-index: 2;
+    position: relative;
+    // position: fixed;
+    // width: 100%;
+    // bottom: 0;
+    // background-color: #fff;
+    // text-align: center;
+    // padding: 16px 0;
+    // z-index: 2;
+    // top: 0;
+    height: 56px;
+    // box-shadow: 0 1px 4px 0px rgb(0, 0, 0, 0.5);
     &__label {
         font-size: 16px;
         font-weight: 500;
@@ -158,7 +158,7 @@
             flex-direction: column;
             overflow: auto;
             height: 100%;
-            height: calc(100vh - 56px - 150px);
+            height: calc(100vh - 56px - 200px);
             &__header {
                 margin: 10px auto;
                 font-size: 18px;
@@ -195,19 +195,25 @@
 }
 
 .guest {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    // display: flex;
+    // flex-direction: column;
+    // // justify-content: space-between;
     // overflow: auto;
-    // height: 100%;
-    // height: calc(100vh - 56px - 69px);
-    height: calc(100vh - 56px - 120px);
-    z-index: 1;
+    // // height: 100%;
+    // // height: calc(100vh - 56px - 69px);
+    // height: calc(100vh - 56px - 140px);
+    // z-index: 1;
     &__btn {
-        margin-bottom: 20px;
+        // margin-bottom: 20px;
         display: flex;
         flex-direction: column;
         gap: 10px;
+        position: fixed;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: 69px;
+        width: 100%;
+        padding: 8px 16px 16px;
     }
 }
 
