--- a/src/assets/shared/components/pages/Qr/index.module.scss
+++ b/src/assets/shared/components/pages/Qr/index.module.scss
@@ -34,20 +34,20 @@
     height: calc(var(--vh, 1vh) * 100);
 }
 .header {
-    text-align: center;
-    background-color: #fff;
-    padding: 16px 0;
-    box-shadow: 0 1px 4px 0px rgb(0, 0, 0, 0.5);
-    z-index: 2;
-    position: relative;
-    // position: fixed;
-    // width: 100%;
-    // bottom: 0;
-    // background-color: #fff;
     // text-align: center;
+    // background-color: #fff;
     // padding: 16px 0;
+    box-shadow: 0 1px 4px 0px rgb(0, 0, 0, 0.5);
     // z-index: 2;
-    // top: 0;
+    // position: relative;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    background-color: #fff;
+    text-align: center;
+    padding: 16px 0;
+    z-index: 2;
+    top: 0;
     height: 56px;
     // box-shadow: 0 1px 4px 0px rgb(0, 0, 0, 0.5);
     &__label {
