--- a/src/assets/shared/components/inputs/InputDropdown/index.module.scss
+++ b/src/assets/shared/components/inputs/InputDropdown/index.module.scss
@@ -92,6 +92,8 @@
     top: calc(100% + 5px);
     background-color: white;
     z-index: 100;
+    height: 274px;
+    overflow: auto;
 }
 .options {
     font-family: "Montserrat", sans-serif;
@@ -107,6 +109,8 @@
     top: calc(100% + 55px);
     background-color: white;
     z-index: 100;
+    height: 274px;
+    overflow: auto;
 }
 .inp {
     position: absolute;
