--- a/src/assets/shared/components/inputs/InputDropdown/index.module.scss
+++ b/src/assets/shared/components/inputs/InputDropdown/index.module.scss
@@ -83,7 +83,6 @@
     padding: 0;
     list-style: none;
     display: block;
-    max-height: 15em;
     overflow-y: auto;
     border: 2px solid #b3b3b3;
     border-radius: 6px;
@@ -92,6 +91,24 @@
     top: calc(100% + 5px);
     background-color: white;
     z-index: 100;
+}
+.optionsnotScroll {
+    font-family: "Montserrat", sans-serif;
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: block;
+    overflow-y: auto;
+    border: 2px solid #b3b3b3;
+    border-radius: 6px;
+    width: 100%;
+    left: 0;
+    top: calc(100% + 5px);
+    background-color: white;
+    z-index: 100;
+    height: 274px;
+    overflow: auto;
 }
 .options {
     font-family: "Montserrat", sans-serif;
@@ -108,7 +125,7 @@
     background-color: white;
     z-index: 100;
 }
-.optionsTag {
+.optionsScroll {
     font-family: "Montserrat", sans-serif;
     position: absolute;
     margin: 0;
@@ -127,8 +144,7 @@
 }
 .inp {
     position: absolute;
-    // display: none;
-    // max-height: 15em;
+
     width: 100%;
     left: 0;
     top: calc(100% + 5px);
